aligning the navigation issues

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,13 +1,40 @@
+/* body {
+  font-family: 'Poppins, Roboto, sans-serif'
+} */
+body { font: 'Poppins'; }
+* {
+  margin: 0;
+  padding: 0;
+}
 nav {
+  height: 77px;
   background-image:  linear-gradient(to right, #e98453, #b45277);
   color: white;
+  font-family: 'Roboto', Times, serif;
+  font-size: 24px;
+  line-height: 20%;
+  padding: 20px;
+  position: relative;
 }
 nav img {
-  width: 200px;
+  width: 150px;
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
 }
 nav ul {
   list-style: none;
-  margin: 5px;
+  /* margin: 5px; */
+  /* padding: 0; */
+  display: flex;
+}
+nav ul li {
+  margin-top: auto;
   padding: 0;
-  display: inline-flex;
+}
+nav ul li:nth-child(3) {
+  font-style: italic;
+}
+nav ul li:nth-child(4){
+  margin-left: auto;
 }
